"implement creation of Stripe customer"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jackson.time-zone= UTC
 ## App Properties
 app.jwtSecret= simkiv
 app.jwtExpirationInMs = 604800000
+##Stripe keys
+stripe.keys.secret=sk_test_jVMoISamhhXdkDBbcNwPk8hH00fqqmjnDH
+stripe.keys.public=pk_test_dBl6cSBVDIP280Il7kaO9q9Z00vKSrWEcO
+##TicketEvolution keys
+ticketevolution.token=cb36f687ff3b38169981bdf4d7805e7f
+ticketevolution.secret=pbjoYsw6B67VuTJTLFHHExiMkXceLMt+Nmg9FQ1X
