--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <version>2.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>10.12.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
